--- a/src/App.css
+++ b/src/App.css
@@ -287,6 +287,17 @@ table tr:nth-child(even) {
   background-color: rgba(79, 195, 247, 0.1);
 }
 
+.attribute-header {
+  width: 150px;
+  background-color: var(--secondary-color) !important;
+}
+
+.attribute-name {
+  font-weight: bold;
+  background-color: #f5f5f5;
+  color: var(--secondary-color);
+}
+
 .process-id {
   font-weight: bold;
   background-color: var(--primary-color);
