--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import "./styles/tokens.css";
+@import "./styles/layout.css";
 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
